--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -5,6 +5,10 @@
   margin: 0 auto;
   padding: 2rem;
   font-weight: normal;
+
+  @media only screen and (max-width: 600px) {
+    padding: 0.5rem;
+  }
 }
 
 a,
